# GWCA

./: .gitignore  .gitmodules  API.vcxproj  CMakeLists.txt  GWCA.2013.vcxproj  GWCA.2013.vcxproj.filters  GWCA.2015.vcxproj  GWCA.2015.vcxproj.filters  GWCA.vcxproj  GWCA.vcxproj.filters  GWCA_VS2013.vcxproj  README.md  make.bat  make_debug.bat  make_public_release.bat  make_public_release.py
Dependencies/: CMakeLists.txt
Examples/: CMakeLists.txt  Examples.sln
Examples/GwArmory/: ArmorsDatabase.h  CMakeLists.txt  GwArmory.au3  GwArmory.vcxproj  GwArmory.vcxproj.filters  ImGuiAddons.cpp  ImGuiAddons.h  main.cpp
GWCA/: APIMain.h  AgentMgr.cpp  AgentMgr.h  CameraMgr.cpp  CameraMgr.h  ChatCommandMgr.cpp  ChatCommandMgr.h  ChatLogMgr.cpp  ChatLogMgr.h  ChatMgr.cpp  ChatMgr.h  CommandMgr.cpp  CommandMgr.h  CtoSHeaders.h  CtoSMgr.cpp  CtoSMgr.h  DirectXMgr.cpp  DirectXMgr.h  EffectMgr.cpp  EffectMgr.h  FriendListMgr.cpp  FriendListMgr.h  GWAPIMgr.cpp  GWAPIMgr.h  GWCA.cpp  GWCA.h  GWCAManager.cpp  GWCAManager.h  GWStructPositions.h  GWStructures.h  GameContext.h  GameThreadMgr.cpp  GameThreadMgr.h  GuildMgr.cpp  GuildMgr.h  GwConstants.h  GwConstantsMaps.h  GwConstantsSkills.h  Hooker.cpp  Hooker.h  (+22 more)
GWCA_DLL/: GWCA.cpp  GWCA.h  GWCA_DLL.sln  GWCA_DLL.vcxproj  GWCA_DLL.vcxproj.filters  gwca_api.h  gwca_dll.cpp
GWCA_Test_DLL/: GWCA_Test_DLL.sln  GWCA_Test_DLL.vcxproj  GWCA_Test_DLL.vcxproj.filters
GWCA_Test_Static/: GWCA_Test_Static.sln  GWCA_Test_Static.vcxproj  GWCA_Test_Static.vcxproj.filters
GWCA_example/: GWCA_example.2013.sln  GWCA_example.2013.vcxproj  main.cpp  (+4 more)
(+396 files in other folders)
